--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'com.amazonaws:aws-android-sdk-core:2.2.+'
-    compile 'com.amazonaws:aws-android-sdk-ec2:2.2.+'
-    compile 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
-    compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.+'
-
     compile 'com.android.volley:volley:1.0.0'
+
+    compile 'com.google.android.gms:play-services-ads:11.0.0'
 }
